--- a/local.example.yml
+++ b/local.example.yml
@@ -4,16 +4,13 @@ fs:
     magento2:
       host: data/web/magento2
       guest: /data/web/magento2
+    magento1:
+      host: data/web/public
+      guest: /data/web/public
     nginx:
       host: data/web/nginx/
       guest: /data/web/nginx/
-php:
-  version: 5.5
 hostmanager:
   extra-aliases:
     - my-custom-store-url1.local
     - my-custom-store-url2.local
-magento:
-  version: 2
-varnish:
-  enabled: false
