unit tests with rspec

--- a/vagrant/plugins/vagrant-hypconfigmgmt/Makefile
+++ b/vagrant/plugins/vagrant-hypconfigmgmt/Makefile
@@ -7,8 +7,10 @@ DESCRIPTION := Prompt to configure a hypernode-vagrant
 
 all:
 	rake build
+test:
+	bundle exec rspec spec/
 install:
-	find pkg/ | tail -n 1 | xargs vagrant plugin install
+	find pkg/ -name '*.gem' | head -n 1 | xargs vagrant plugin install
 clean:
 	git clean -xfd
 
