add default hostname to configuration
Adapted from downstream [here](https://bitbucket.org/creaminternet/hypernode/commits/14b08e86647dc3f67eceafd9925daa305aa117f3)

--- a/vagrant/plugins/vagrant-hypconfigmgmt/Makefile
+++ b/vagrant/plugins/vagrant-hypconfigmgmt/Makefile
@@ -10,7 +10,7 @@ all:
 test:
 	bundle exec rspec spec/
 install:
-	find pkg/ -name '*.gem' | head -n 1 | xargs vagrant plugin install
+	find pkg/ -name '*.gem' | tail -n 1 | xargs vagrant plugin install
 clean:
 	git clean -xfd
 
